--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "autoprefixer": "^9.8.6",
     "cross-env": "^7.0.3",
     "cssnano": "^4.1.10",
+    "logrocket": "^2.1.2",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.2.6",
     "postcss-cli": "^8.3.1",
